--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,163 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.specknet.airrespeck.MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.specknet.airrespeck.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.25"
-        android:gravity="fill_horizontal">
+        android:layout_height="wrap_content">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:baselineAligned="false"
-            android:gravity="fill_horizontal">
-
+            android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/respiratory_rate"
                 android:id="@+id/tvRespiratoryRate"
-                android:layout_column="0" />
-
-            <TextView
+                android:text="@string/respiratory_rate"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="20"
+                android:layout_column="0" />
+            <TextView
                 android:id="@+id/tvRespiratoryRateVal"
-                android:layout_column="1"
-                android:textAlignment="viewEnd" />
-
-            <TextView
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="viewEnd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_column="1" />
+            <TextView
                 android:id="@+id/tvRespiratoryRateUnit"
-                android:layout_column="2"
-                android:text="@string/bpm" />
-
+                android:text="@string/bpm"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="fill_horizontal">
-
+            android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/pm10"
                 android:id="@+id/tvPM10"
+                android:text="@string/pm10"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_column="0" />
-
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="100"
                 android:id="@+id/tvPM10Val"
-                android:layout_column="1"
-                android:textAlignment="viewEnd" />
-
-            <TextView
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="viewEnd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_column="1" />
+            <TextView
                 android:id="@+id/tvPM10Unit"
-                android:layout_column="2"
-                android:text="@string/ug_m3" />
-
+                android:text="@string/ug_m3"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="fill_horizontal">
-
+            android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/pm2_5"
                 android:id="@+id/tvPM2.5"
+                android:text="@string/pm2_5"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_column="0" />
-
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="150"
                 android:id="@+id/tvPM2.5Val"
-                android:layout_column="1"
-                android:textAlignment="viewEnd" />
-
-            <TextView
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="viewEnd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_column="1" />
+            <TextView
                 android:id="@+id/tvPM2.5Unit"
-                android:layout_column="2"
-                android:text="@string/ug_m3" />
+                android:text="@string/ug_m3"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2" />
         </TableRow>
 
     </TableLayout>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:id="@+id/imgvGoNoGo"
-        android:layout_weight="0.25"
-        android:src="@drawable/ic_running_man" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Safe to exercise"
-        android:id="@+id/tvFeedback"
-        android:layout_weight="0.41"
-        android:gravity="center_vertical|center_horizontal" />
-
-    <LinearLayout
+        android:src="@drawable/ic_running_man"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2" >
+         />
 
-        <Button
+    <TextView
+        android:id="@+id/tvFeedback"
+        android:text="Safe to exercise"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:id="@+id/lytMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+<!--        <Button
             android:id="@+id/btnHome"
+            android:text="@string/home"
+            android:drawableTop="@drawable/ic_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/home"
-            android:textAlignment="center"
-            android:scaleType="fitXY"
-            android:layout_weight="1"
-            android:singleLine="false"
-            android:drawableTop="@drawable/ic_home" />
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/btnSettings"
+            android:text="@string/settings"
+            android:drawableTop="@drawable/ic_settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/settings"
-            android:textAlignment="center"
-            android:scaleType="fitXY"
-            android:layout_weight="1"
-            android:drawableTop="@drawable/ic_settings" />
+            android:layout_weight="1" />-->
 
     </LinearLayout>
-
 </LinearLayout>
