--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,136 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.specknet.airrespeck.MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.specknet.airrespeck.MainActivity">
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tvRespiratoryRate"
-                android:text="@string/respiratory_rate"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0" />
-            <TextView
-                android:id="@+id/tvRespiratoryRateVal"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textAlignment="viewEnd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1" />
-            <TextView
-                android:id="@+id/tvRespiratoryRateUnit"
-                android:text="@string/bpm"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tvPM10"
-                android:text="@string/pm10"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0" />
-            <TextView
-                android:id="@+id/tvPM10Val"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textAlignment="viewEnd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1" />
-            <TextView
-                android:id="@+id/tvPM10Unit"
-                android:text="@string/ug_m3"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tvPM2.5"
-                android:text="@string/pm2_5"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0" />
-            <TextView
-                android:id="@+id/tvPM2.5Val"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textAlignment="viewEnd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1" />
-            <TextView
-                android:id="@+id/tvPM2.5Unit"
-                android:text="@string/ug_m3"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2" />
-        </TableRow>
-
-    </TableLayout>
-
-    <ImageView
-        android:id="@+id/imgvGoNoGo"
-        android:src="@drawable/ic_running_man"
+    <fragment
+        android:id="@+id/main_data_fragment"
+        android:name="com.specknet.airrespeck.MainDataFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         />
+        android:layout_gravity="top|center_horizontal"
+        tools:layout="@layout/fragment_main_data" />
 
-    <TextView
-        android:id="@+id/tvFeedback"
-        android:text="Safe to exercise"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:gravity="center_vertical|center_horizontal"
+    <fragment
+        android:id="@+id/feedback_fragment"
+        android:name="com.specknet.airrespeck.FeedbackFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        tools:layout="@layout/fragment_feedback" />
+
+<!--    <FrameLayout
+        android:id="@+id/content_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></FrameLayout>-->
+
+    <fragment
+        android:id="@+id/menu_fragment"
+        android:name="com.specknet.airrespeck.MenuFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_gravity="bottom|center_horizontal"
+        tools:layout="@layout/fragment_menu" />
 
-    <LinearLayout
-        android:id="@+id/lytMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-<!--        <Button
-            android:id="@+id/btnHome"
-            android:text="@string/home"
-            android:drawableTop="@drawable/ic_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/btnSettings"
-            android:text="@string/settings"
-            android:drawableTop="@drawable/ic_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />-->
-
-    </LinearLayout>
 </LinearLayout>
