--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,14 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/menu_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="com.specknet.airrespeck.MenuFragment">
-
-    <LinearLayout
-        android:id="@+id/menu_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    </LinearLayout>
-
-</FrameLayout>
+    android:orientation="horizontal"
+    tools:context="com.specknet.airrespeck.MenuFragment" />
