Reading View added. Layout modified. Dummy activities for AirSpeck and RESpeck added.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,10 +22,9 @@
 
     <fragment
         android:id="@+id/menu"
-        android:name="com.specknet.airrespeck.MenuFragment"
+        android:name="com.specknet.airrespeck.fragments.MenuFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
         tools:layout="@layout/fragment_menu" />
 
 </LinearLayout>
