--- a/app/src/main/res/layout/activity_airspeck.xml
+++ b/app/src/main/res/layout/activity_airspeck.xml
@@ -7,8 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.specknet.airrespeck.AirSpeckActivity">
-
+    tools:context=".airspeck.AirSpeckActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,4 +17,5 @@
         android:id="@+id/textView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
