--- a/app/src/main/res/layout/fragment_readings.xml
+++ b/app/src/main/res/layout/fragment_readings.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.specknet.airrespeck.ReadingsFragment">
+    tools:context=".fragments.ReadingsFragment">
 
     <TableLayout
         android:layout_width="match_parent"
