ReadingView: drawing elements positioning modified. Settings activity added.

--- a/app/src/main/res/layout/cyclic_fragment_reading.xml
+++ b/app/src/main/res/layout/cyclic_fragment_reading.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:layout_weight="100"
     android:orientation="horizontal"
-    tools:context=".fragments.ReadingFragment">
+    tools:context=".fragments.CyclicReadingFragment">
 
     <ImageButton
         android:id="@+id/prev_reading"
