--- a/app/src/main/res/layout/activity_main_tabs.xml
+++ b/app/src/main/res/layout/activity_main_tabs.xml
@@ -29,6 +29,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+            <!--style="@style/MyCustomTabLayout"-->
 
     </android.support.design.widget.AppBarLayout>
 
@@ -36,6 +37,6 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
