--- a/app/src/main/res/layout/fragment_home_list_view.xml
+++ b/app/src/main/res/layout/fragment_home_list_view.xml
@@ -9,17 +9,27 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/readings"
+        <TextView
+            android:id="@+id/readings_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/readings_title"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ListView
+            android:id="@+id/readings_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <FrameLayout
+        <TextView
             android:id="@+id/feedback"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </LinearLayout>
 
