Air quality page added: List and graphics views. Icons in tabs preference added.

--- a/app/src/main/res/layout/activity_main_tabs.xml
+++ b/app/src/main/res/layout/activity_main_tabs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="https://schemas.android.com/tools"
     android:id="@+id/main_content"
@@ -28,7 +29,7 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" style="@style/MyCustomTabLayout"/>
             <!--style="@style/MyCustomTabLayout"-->
 
     </android.support.design.widget.AppBarLayout>
