--- a/app/src/main/res/layout/fragment_home_list_view.xml
+++ b/app/src/main/res/layout/fragment_home_list_view.xml
@@ -14,8 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/readings_title"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:text="@string/readings_title" />
 
         <ListView
             android:id="@+id/readings_list"
@@ -28,8 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:gravity="center_horizontal" />
 
     </LinearLayout>
 
