--- a/app/src/main/res/layout/reading_list_view_item.xml
+++ b/app/src/main/res/layout/reading_list_view_item.xml
@@ -1,33 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/reading_item_description"
+        android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:gravity="center" />
 
     <TextView
-        android:id="@+id/reading_item_value"
+        android:id="@+id/value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center_vertical|end"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:gravity="center_vertical|end" />
 
     <TextView
-        android:id="@+id/reading_item_units"
+        android:id="@+id/units"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_vertical|start"
         android:paddingStart="5sp"
-        android:paddingEnd="5sp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:paddingEnd="5sp" />
 
 </LinearLayout>
