--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,7 +11,7 @@
             android:orderInCategory="100"
             android:title="@string/action_settings"
             android:icon="@drawable/ic_settings"
-            app:showAsAction="never" />
+            app:showAsAction="ifRoom|withText" />
 
         <item
             android:id="@+id/action_respeck"
