--- a/app/src/main/res/xml/pref_user_interface.xml
+++ b/app/src/main/res/xml/pref_user_interface.xml
@@ -1,30 +1,52 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ListPreference
-        android:defaultValue="0"
-        android:entries="@array/pref_home_screen_readings_display_mode_list"
-        android:entryValues="@array/pref_home_screen_readings_display_mode_list_values"
-        android:key="home_screen_readings_display_mode"
-        android:negativeButtonText="@null"
-        android:positiveButtonText="@null"
-        android:title="@string/pref_title_main_screen_readings_display_mode" />
+    <PreferenceCategory android:title="@string/pref_category_ui_general">
+        <ListPreference
+            android:defaultValue="1"
+            android:entries="@array/pref_font_size_list"
+            android:entryValues="@array/pref_font_size_list_values"
+            android:key="font_size"
+            android:negativeButtonText="@null"
+            android:positiveButtonText="@null"
+            android:title="@string/pref_title_font_size" />
+    </PreferenceCategory>
 
-    <SwitchPreference
-        android:defaultValue="false"
-        android:key="main_menu_layout"
-        android:summary="@string/pref_description_main_menu_layout"
-        android:title="@string/pref_title_main_menu_layout" />
+    <PreferenceCategory android:title="@string/pref_category_ui_readings">
+        <ListPreference
+            android:defaultValue="0"
+            android:entries="@array/pref_readings_display_mode_list"
+            android:entryValues="@array/pref_readings_display_mode_list_values"
+            android:key="readings_display_mode"
+            android:negativeButtonText="@null"
+            android:positiveButtonText="@null"
+            android:title="@string/pref_title_readings_display_mode" />
+    </PreferenceCategory>
 
-    <SwitchPreference
-        android:defaultValue="false"
-        android:key="airspeck_app_access"
-        android:summary="@string/pref_description_airspeck_app_access"
-        android:title="@string/pref_title_airspeck_app_access" />
+    <PreferenceCategory android:title="@string/pref_category_ui_advanced">
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="main_menu_layout"
+            android:summary="@string/pref_description_main_menu_layout"
+            android:title="@string/pref_title_main_menu_layout" />
 
-    <SwitchPreference
-        android:defaultValue="false"
-        android:key="respeck_app_access"
-        android:summary="@string/pref_description_respeck_app_access"
-        android:title="@string/pref_title_respeck_app_access" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:dependency="main_menu_layout"
+            android:key="icons_in_tabs"
+            android:summary="@string/pref_description_icons_in_tabs"
+            android:title="@string/pref_title_icons_in_tabs" />
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="airspeck_app_access"
+            android:summary="@string/pref_description_airspeck_app_access"
+            android:title="@string/pref_title_airspeck_app_access" />
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="respeck_app_access"
+            android:summary="@string/pref_description_respeck_app_access"
+            android:title="@string/pref_title_respeck_app_access" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
